chore(cairo): maven build refactoring
Fixed javadoc issues too. Created profiles for binary build, central release and web console build